--- a/index.html
+++ b/index.html
@@ -795,12 +795,12 @@
             <div class="col-lg-4 col-md-6">
               <div class="speaker" data-aos="fade-up" data-aos-delay="100">
                 <img
-                  src="assets/img/speakers/tomh.jpg"
+                  src="assets/img/speakers/TomH.jpg"
                   alt="Speaker 1"
                   class="img-fluid"
                 />
                 <div class="details">
-                  <h3><a href="speaker-details.html">Tom Helliwell</a></h3>
+                  <h3><a href="speaker-details.html">Tom Halliwell</a></h3>
                   <p>A late addition roped in by Alice, will Tom be able to put up with our bullshit for a full 10 days? We'll know soon enough. No stranger to a spiritual journey, Tom's well prepared.</p>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
