added beach section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
+    <!-- Script for Google maps (beaches)-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtlZLNM6SCJG4f2SKsjV3pBha4lWYJ9TQ&callback=initMap" async defer></script>
+
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
 
@@ -899,12 +902,12 @@ Close to everything, but quiet...
             <div class="col-lg-3 col-md-4">
               <div class="venue-gallery">
                 <a
-                  href="assets/img/venue-gallery/interior.webp"
+                  href="assets/img/venue-gallery/view2.webp"
                   class="glightbox"
                   data-gall="venue-gallery"
                 >
                   <img
-                    src="assets/img/venue-gallery/interior.webp"
+                    src="assets/img/venue-gallery/view2.webp"
                     alt=""
                     class="img-fluid"
                   />
@@ -931,20 +934,20 @@ Close to everything, but quiet...
             <div class="col-lg-3 col-md-4">
               <div class="venue-gallery">
                 <a
-                  href="assets/img/venue-gallery/nightlight.webp"
+                  href="assets/img/venue-gallery/view.webp"
                   class="glightbox"
                   data-gall="venue-gallery"
                 >
                   <img
-                    src="assets/img/venue-gallery/nightlight.webp"
+                    src="assets/img/venue-gallery/view.webp"
                     alt=""
                     class="img-fluid"
                   />
                 </a>
               </div>
-            </div>
-
-            <div class="col-lg-3 col-md-4">
+            </div></div>
+<div class="row g-0">
+  <div class="col-lg-3 col-md-4 mx-auto d-flex">
               <div class="venue-gallery">
                 <a
                   href="assets/img/venue-gallery/table2.webp"
@@ -960,15 +963,15 @@ Close to everything, but quiet...
               </div>
             </div>
 
-            <div class="col-lg-3 col-md-4">
+            <div class="col-lg-3 col-md-4 mx-auto d-flex">
               <div class="venue-gallery">
                 <a
-                  href="assets/img/venue-gallery/view2.webp"
+                  href="assets/img/venue-gallery/interior.webp"
                   class="glightbox"
                   data-gall="venue-gallery"
                 >
                   <img
-                    src="assets/img/venue-gallery/view2.webp"
+                    src="assets/img/venue-gallery/interior.webp"
                     alt=""
                     class="img-fluid"
                   />
@@ -976,15 +979,15 @@ Close to everything, but quiet...
               </div>
             </div>
 
-            <div class="col-lg-3 col-md-4">
+            <div class="col-lg-3 col-md-4 mx-auto d-flex">
               <div class="venue-gallery">
                 <a
-                  href="assets/img/venue-gallery/view.webp"
+                  href="assets/img/venue-gallery/nightlight.webp"
                   class="glightbox"
                   data-gall="venue-gallery"
                 >
                   <img
-                    src="assets/img/venue-gallery/view.webp"
+                    src="assets/img/venue-gallery/nightlight.webp"
                     alt=""
                     class="img-fluid"
                   />
@@ -994,8 +997,33 @@ Close to everything, but quiet...
 
           </div>
         </div>
+      </div>
       </section>
       <!-- End Venue Section -->
+
+      <!-- Beaches Section -->
+      <section id="venue">
+        <div class="container-fluid row g-0" data-aos="fade-up">
+          <div class="section-header">
+            <h2>Ibiza Beaches</h2>
+            <p>All beach locations</p>
+            <div id="map">
+              <img
+                src="assets\img\mapimages\0001.jpg"
+                alt=""
+                class="img-fluid"
+              />
+              <img
+                src="assets\img\mapimages\0002.jpg"
+                alt=""
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      
+        <!-- End Beaches Section -->
 
       <!-- ======= Hotels Section ======= -->
       <section id="hotels" class="section-with-bg">
