finished beaches section begin club

--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#speakers">Crew</a></li>
             <li><a class="nav-link scrollto" href="#schedule">Party Calendar</a></li>
-            <li><a class="nav-link scrollto" href="#venue">Accomodation</a></li>
+            <li><a class="nav-link scrollto" href="#speakers">Crew</a></li>
+            <li><a class="nav-link scrollto" href="#beaches">Beaches</a></li>
+            <li><a class="nav-link scrollto" href="#clubs">Clubs</a></li>
             </li>
             <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
@@ -845,7 +846,7 @@
       <!-- End Speakers Section -->
 
       <!-- ======= Venue Section ======= -->
-      <section id="venue">
+      <section id="venue" class="section-with-bg">
         <div class="container-fluid" data-aos="fade-up">
           <div class="section-header">
             <h2>Villa Location</h2>
@@ -1002,22 +1003,28 @@ Close to everything, but quiet...
       <!-- End Venue Section -->
 
       <!-- Beaches Section -->
-      <section id="venue">
+      <section id="beaches">
         <div class="container-fluid row g-0" data-aos="fade-up">
           <div class="section-header">
-            <h2>Ibiza Beaches</h2>
-            <p>All beach locations</p>
-            <div id="map">
-              <img
-                src="assets\img\mapimages\0001.jpg"
-                alt=""
-                class="img-fluid"
-              />
-              <img
-                src="assets\img\mapimages\0002.jpg"
-                alt=""
-                class="img-fluid"
-              />
+            <h2>Interactive Beach Map</h2>
+            <p>Take a closer look</p>
+          </div >
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=11Vdk6ViyRgrOfR4tWaZTAEeBK3wPFvw&ehbc=2E312F" width="100%" height="600"></iframe>
+              <div class="my-4 text-center mt-5">
+          
+                <h2>Ibiza Beaches</h2>
+                <p>The spanish government's guide to ibiza's beaches</p>
+                <div id="map">
+                  <img
+                    src="assets\img\mapimages\0001.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                  <img
+                    src="assets\img\mapimages\0002.jpg"
+                    alt=""
+                    class="img-fluid"
+                  />
             </div>
           </div>
         </div>
@@ -1026,11 +1033,11 @@ Close to everything, but quiet...
         <!-- End Beaches Section -->
 
       <!-- ======= Hotels Section ======= -->
-      <section id="hotels" class="section-with-bg">
+      <section id="clubs" class="section-with-bg">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h2>Hotels (Section to be changed)</h2>
-            <p>Her are some nearby hotels</p>
+            <h2>Clubs</h2>
+            <p>Every nightclub on the island</p>
           </div>
 
           <div class="row" data-aos="fade-up" data-aos-delay="100">
