--- a/index.html
+++ b/index.html
@@ -1050,16 +1050,12 @@ Close to everything, but quiet...
                     class="img-fluid"
                   />
                 </div>
-                <h3><a href="#">Hotel 1</a></h3>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                </div>
-                <p>0.4 Mile from the Venue</p>
+                <div class="row"
+                <h3><a class="col-lg-4 col-md-6" href="#">Hotel 1</a></h3>
+
+                <p class="col-lg-4 col-md-6">0.4 Mile from the Venue</p>
               </div>
+            </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
