--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@ Close to everything, but quiet...
             <h2>Interactive Beach Map</h2>
             <p>Take a closer look</p>
           </div >
-            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=11Vdk6ViyRgrOfR4tWaZTAEeBK3wPFvw&ehbc=2E312F" width="100%" height="600"></iframe>
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=11Vdk6ViyRgrOfR4tWaZTAEeBK3wPFvw&ehbc=2E312F&noprof=1" width="100%" height="600"></iframe>
               <div class="my-4 text-center mt-5">
           
                 <h2>Ibiza Beaches</h2>
