--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About</a></li>
             <li><a class="nav-link scrollto" href="#schedule">Party Calendar</a></li>
-            <li><a class="nav-link scrollto" href="#speakers">Crew</a></li>
+            <li><a class="nav-link scrollto" href="#speakers">Contenders</a></li>
             <li><a class="nav-link scrollto" href="#beaches">Beaches</a></li>
             <li><a class="nav-link scrollto" href="#clubs">Clubs</a></li>
             </li>
