--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@ Close to everything, but quiet...
         <div class="container-fluid row g-0" data-aos="fade-up">
           <div class="section-header">
             <h2>Interactive Beach Map</h2>
-            <p>Take a closer look</p>
+            <p>Take a closer look - click any of the blue markers for pictures taken on location</p>
           </div >
             <iframe src="https://www.google.com/maps/d/u/0/embed?mid=11Vdk6ViyRgrOfR4tWaZTAEeBK3wPFvw&ehbc=2E312F&noprof=1" width="100%" height="600"></iframe>
               <div class="my-4 text-center mt-5">
