--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <li><a href="#">Drop Down 4</a></li>
           </ul>
         </li> -->
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -1032,9 +1032,9 @@ Close to everything, but quiet...
       
         <!-- End Beaches Section -->
 
-      <!-- ======= Hotels Section ======= -->
+      <!-- ======= Clubs Section (was hotels) ======= -->
       <section id="clubs" class="section-with-bg">
-        <div class="container" data-aos="fade-up">
+        <div class="container text-center" data-aos="fade-up">
           <div class="section-header">
             <h2>Clubs</h2>
             <p>Every nightclub on the island</p>
@@ -1045,61 +1045,207 @@ Close to everything, but quiet...
               <div class="hotel">
                 <div class="hotel-img">
                   <img
-                    src="assets/img/hotels/1.jpg"
-                    alt="Hotel 1"
+                    src="assets\img\club-inside\hi-inside.jpg"
+                    alt="Hi"
                     class="img-fluid"
                   />
                 </div>
-                <div class="row"
-                <h3><a class="col-lg-4 col-md-6" href="#">Hotel 1</a></h3>
+                <div class="row">
 
-                <p class="col-lg-4 col-md-6">0.4 Mile from the Venue</p>
+              <div class="col-6 mx-auto d-block">
+                <img class="clubicon " src="assets\img\clubs\Hi.png">
               </div>
-            </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-              <div class="hotel">
-                <div class="hotel-img">
-                  <img
-                    src="assets/img/hotels/2.jpg"
-                    alt="Hotel 2"
-                    class="img-fluid"
-                  />
-                </div>
-                <h3><a href="#">Hotel 2</a></h3>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill-half-full"></i>
-                </div>
-                <p>0.5 Mile from the Venue</p>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-              <div class="hotel">
-                <div class="hotel-img">
-                  <img
-                    src="assets/img/hotels/3.jpg"
-                    alt="Hotel 3"
-                    class="img-fluid"
-                  />
-                </div>
-                <h3><a href="#">Hotel 3</a></h3>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                </div>
-                <p>0.6 Mile from the Venue</p>
+              <div class="col-6 my-5 mx-auto d-block">
+                <h3 ><a  href="#">Hï Ibiza</a></h3>
+                <p>Voted number one club in the world two years in a row.</p>
               </div>
             </div>
           </div>
         </div>
+
+
+
+        <div class="col-lg-4 col-md-6">
+          <div class="hotel">
+            <div class="hotel-img">
+              <img
+                src="assets\img\club-inside\pacha-inside.jpg"
+                alt="Hotel 1"
+                class="img-fluid"
+              />
+            </div>
+            <div class="row">
+
+          <div class="col-6 mx-auto d-block">
+            <img class="clubicon " src="assets\img\clubs\pacha.png">
+          </div>
+          <div class="col-6 my-5 mx-auto d-block">
+            <h3 ><a  href="#">Hï Ibiza</a></h3>
+            <p>Voted number one club in the world two years in a row.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+            
+
+    <div class="col-lg-4 col-md-6">
+      <div class="hotel">
+        <div class="hotel-img">
+          <img
+            src="assets\img\club-inside\dc10.jpg"
+            alt="Hotel 1"
+            class="img-fluid"
+          />
+        </div>
+        <div class="row">
+
+      <div class="col-6 mx-auto d-block">
+        <img class="clubicon " src="assets\img\clubs\dc10.png">
+      </div>
+      <div class="col-6 my-5 mx-auto d-block">
+        <h3 ><a  href="#">Hï Ibiza</a></h3>
+        <p>Voted number one club in the world two years in a row.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="col-lg-4 col-md-6">
+  <div class="hotel">
+    <div class="hotel-img">
+      <img
+        src="assets\img\club-inside\chinois.jpg"
+        alt="Chinois"
+        class="img-fluid"
+      />
+    </div>
+    <div class="row">
+
+  <div class="col-6 mx-auto d-block">
+    <img class="clubicon " src="assets\img\clubs\chinois.jpg">
+  </div>
+  <div class="col-6 my-5 mx-auto d-block">
+    <h3 ><a  href="#">Hï Ibiza</a></h3>
+    <p>Voted number one club in the world two years in a row.</p>
+  </div>
+</div>
+</div>
+</div>
+
+
+<div class="col-lg-4 col-md-6">
+  <div class="hotel">
+    <div class="hotel-img">
+      <img
+        src="assets\img\club-inside\covasanta.jpg"
+        alt="Hotel 1"
+        class="img-fluid"
+      />
+    </div>
+    <div class="row">
+
+  <div class="col-6 mx-auto d-block">
+    <img class="clubicon " src="assets\img\clubs\covasanta.jpg">
+  </div>
+  <div class="col-6 my-5 mx-auto d-block">
+    <h3 ><a  href="#">Hï Ibiza</a></h3>
+    <p>Voted number one club in the world two years in a row.</p>
+  </div>
+</div>
+</div>
+</div>
+
+
+<div class="col-lg-4 col-md-6">
+  <div class="hotel">
+    <div class="hotel-img">
+      <img
+        src="assets\img\club-inside\akasha.jpg"
+        alt="Hotel 1"
+        class="img-fluid"
+      />
+    </div>
+    <div class="row">
+
+  <div class="col-6 mx-auto d-block">
+    <img class="clubicon " src="assets\img\clubs\akasha.jpg">
+  </div>
+  <div class="col-6 my-5 mx-auto d-block">
+    <h3 ><a  href="#">Hï Ibiza</a></h3>
+    <p>Voted number one club in the world two years in a row.</p>
+  </div>
+</div>
+</div>
+</div>
+
+<div class="col-lg-4 col-md-6">
+  <div class="hotel">
+    <div class="hotel-img">
+      <img
+        src="assets\img\club-inside\ushuaia.jpg"
+        alt="Hotel 1"
+        class="img-fluid"
+      />
+    </div>
+    <div class="row">
+
+  <div class="col-6 mx-auto d-block">
+    <img class="clubicon " src="assets\img\clubs\ushuaia.jpeg">
+  </div>
+  <div class="col-6 my-5 mx-auto d-block">
+    <h3 ><a  href="#">Hï Ibiza</a></h3>
+    <p>Voted number one club in the world two years in a row.</p>
+  </div>
+</div>
+</div>
+</div>
+
+<div class="col-lg-4 col-md-6">
+  <div class="hotel">
+    <div class="hotel-img">
+      <img
+        src="assets\img\club-inside\amnesia.jpg"
+        alt="Hotel 1"
+        class="img-fluid"
+      />
+    </div>
+    <div class="row">
+
+  <div class="col-6 mx-auto d-block">
+    <img class="clubicon " src="assets\img\clubs\amnesia.jpg">
+  </div>
+  <div class="col-6 my-5 mx-auto d-block">
+    <h3 ><a  href="#">Hï Ibiza</a></h3>
+    <p>Voted number one club in the world two years in a row.</p>
+  </div>
+</div>
+</div>
+</div>
+
+<div class="col-lg-4 col-md-6">
+  <div class="hotel">
+    <div class="hotel-img">
+      <img
+        src="assets\img\club-inside\eden.jpg"
+        alt="Hotel 1"
+        class="img-fluid"
+      />
+    </div>
+    <div class="row">
+
+  <div class="col-6 mx-auto d-block">
+    <img class="clubicon " src="assets\img\clubs\eden.jpg">
+  </div>
+  <div class="col-6 my-5 mx-auto d-block">
+    <h3 ><a  href="#">Hï Ibiza</a></h3>
+    <p>Voted number one club in the world two years in a row.</p>
+  </div>
+</div>
+</div>
+</div>
       </section>
       <!-- End Hotels Section -->
 
@@ -1125,13 +1271,13 @@ Close to everything, but quiet...
                     class="collapsed question"
                     href="#faq1"
                   >
-                    Why the fuck have you made this?
+                    Why exactly have you made this?
                     <i class="bi bi-chevron-down icon-show"></i
                     ><i class="bi bi-chevron-up icon-close"></i>
                   </div>
                   <div id="faq1" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                      Educational purposes and because I have far too much time on my hands.
+                      Largely educational purposes, this is the most extensive work i've done on a web page on my own and i've learned a fair bit about formatting. Like that bit on the clubs section, where each one has a picture, and then beneath that there's a club logo with some text to the right of it? 3 hours. That took me 3 hours. But now I know, so fuck it.
                     </p>
                   </div>
                 </li>
