club section descriptions added

--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@ Close to everything, but quiet...
               </div>
               <div class="col-6 my-5 mx-auto d-block">
                 <h3 ><a  href="#">Hï Ibiza</a></h3>
-                <p>Voted number one club in the world two years in a row.</p>
+                <p>Voted number one club in the world two years in a row. High Tech.</p>
               </div>
             </div>
           </div>
@@ -1080,8 +1080,8 @@ Close to everything, but quiet...
             <img class="clubicon " src="assets\img\clubs\pacha.png">
           </div>
           <div class="col-6 my-5 mx-auto d-block">
-            <h3 ><a  href="#">Hï Ibiza</a></h3>
-            <p>Voted number one club in the world two years in a row.</p>
+            <h3 ><a  href="#">Pacha</a></h3>
+            <p>Very upmarket vibe, older men in white suits, heavy modified women.</p>
           </div>
         </div>
       </div>
@@ -1104,8 +1104,8 @@ Close to everything, but quiet...
         <img class="clubicon " src="assets\img\clubs\dc10.png">
       </div>
       <div class="col-6 my-5 mx-auto d-block">
-        <h3 ><a  href="#">Hï Ibiza</a></h3>
-        <p>Voted number one club in the world two years in a row.</p>
+        <h3 ><a  href="#">DC10</a></h3>
+        <p>As close as Ibiza gets to underground. Very techno, one of the greats.</p>
       </div>
     </div>
   </div>
@@ -1128,8 +1128,8 @@ Close to everything, but quiet...
     <img class="clubicon " src="assets\img\clubs\chinois.jpg">
   </div>
   <div class="col-6 my-5 mx-auto d-block">
-    <h3 ><a  href="#">Hï Ibiza</a></h3>
-    <p>Voted number one club in the world two years in a row.</p>
+    <h3 ><a  href="#">Club Chinois</a></h3>
+    <p>Much newer, replaced Heart, which was very good.</p>
   </div>
 </div>
 </div>
@@ -1151,8 +1151,8 @@ Close to everything, but quiet...
     <img class="clubicon " src="assets\img\clubs\covasanta.jpg">
   </div>
   <div class="col-6 my-5 mx-auto d-block">
-    <h3 ><a  href="#">Hï Ibiza</a></h3>
-    <p>Voted number one club in the world two years in a row.</p>
+    <h3 ><a  href="#">Cova Santa</a></h3>
+    <p>A little out of the way but very cool bohemian vibe, events start earlier.</p>
   </div>
 </div>
 </div>
@@ -1174,8 +1174,8 @@ Close to everything, but quiet...
     <img class="clubicon " src="assets\img\clubs\akasha.jpg">
   </div>
   <div class="col-6 my-5 mx-auto d-block">
-    <h3 ><a  href="#">Hï Ibiza</a></h3>
-    <p>Voted number one club in the world two years in a row.</p>
+    <h3 ><a  href="#">Akasha</a></h3>
+    <p>An unknown to me, very new, sounds like a very chill vibe.</p>
   </div>
 </div>
 </div>
@@ -1196,8 +1196,8 @@ Close to everything, but quiet...
     <img class="clubicon " src="assets\img\clubs\ushuaia.jpeg">
   </div>
   <div class="col-6 my-5 mx-auto d-block">
-    <h3 ><a  href="#">Hï Ibiza</a></h3>
-    <p>Voted number one club in the world two years in a row.</p>
+    <h3 ><a  href="#">Ushuaia</a></h3>
+    <p>Commercial but a fantastic spectacle.</p>
   </div>
 </div>
 </div>
@@ -1218,8 +1218,8 @@ Close to everything, but quiet...
     <img class="clubicon " src="assets\img\clubs\amnesia.jpg">
   </div>
   <div class="col-6 my-5 mx-auto d-block">
-    <h3 ><a  href="#">Hï Ibiza</a></h3>
-    <p>Voted number one club in the world two years in a row.</p>
+    <h3 ><a  href="#">Amnesia</a></h3>
+    <p>It's basically just a big shit warehouse but is a true classic.</p>
   </div>
 </div>
 </div>
@@ -1240,8 +1240,8 @@ Close to everything, but quiet...
     <img class="clubicon " src="assets\img\clubs\eden.jpg">
   </div>
   <div class="col-6 my-5 mx-auto d-block">
-    <h3 ><a  href="#">Hï Ibiza</a></h3>
-    <p>Voted number one club in the world two years in a row.</p>
+    <h3 ><a  href="#">Eden</a></h3>
+    <p>The best club in San An, it's like a mid-tier London club, but it's not to be sniffed at</p>
   </div>
 </div>
 </div>
