--- a/index.html
+++ b/index.html
@@ -1408,13 +1408,9 @@ Close to everything, but quiet...
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-info">
-              <img src="assets/img/logo.png" alt="TheEvenet" />
+        
               <p>
-                In alias aperiam. Placeat tempore facere. Officiis voluptate
-                ipsam vel eveniet est dolor et totam porro. Perspiciatis ad
-                omnis fugit molestiae recusandae possimus. Aut consectetur id
-                quis. In inventore consequatur ad voluptate cupiditate debitis
-                accusamus repellat cumque.
+                Ignore this entire section I haven't touched it.
               </p>
             </div>
 
