--- a/index.html
+++ b/index.html
@@ -1052,10 +1052,10 @@ Close to everything, but quiet...
                 </div>
                 <div class="row">
 
-              <div class="col-6 mx-auto d-block">
+              <div class="col-6 mx-auto my-auto d-block">
                 <img class="clubicon " src="assets\img\clubs\Hi.png">
               </div>
-              <div class="col-6 my-5 mx-auto d-block club-blurb">
+              <div class="col-6 my-5 mx-auto my-auto d-block club-blurb">
                 <h3 ><a  href="#">Hï Ibiza</a></h3>
                 <p>Voted number one club in the world two years in a row. High Tech.</p>
               </div>
