--- a/index.html
+++ b/index.html
@@ -1076,10 +1076,10 @@ Close to everything, but quiet...
             </div>
             <div class="row">
 
-          <div class="col-6 mx-auto d-block">
+          <div class="col-6 mx-auto my-auto d-block">
             <img class="clubicon " src="assets\img\clubs\pacha.png">
           </div>
-          <div class="col-6 my-5 mx-auto d-block">
+          <div class="col-6 my-5 mx-auto my-auto d-block">
             <h3 ><a  href="#">Pacha</a></h3>
             <p>Very upmarket vibe, older men in white suits, heavy modified women.</p>
           </div>
@@ -1100,10 +1100,10 @@ Close to everything, but quiet...
         </div>
         <div class="row">
 
-      <div class="col-6 mx-auto d-block">
+      <div class="col-6 mx-auto my-auto d-block">
         <img class="clubicon " src="assets\img\clubs\dc10.png">
       </div>
-      <div class="col-6 my-5 mx-auto d-block">
+      <div class="col-6 my-5 mx-auto my-auto d-block">
         <h3 ><a  href="#">DC10</a></h3>
         <p>As close as Ibiza gets to underground. Very techno, one of the greats.</p>
       </div>
@@ -1124,10 +1124,10 @@ Close to everything, but quiet...
     </div>
     <div class="row">
 
-  <div class="col-6 mx-auto d-block">
+  <div class="col-6 mx-auto my-auto d-block">
     <img class="clubicon " src="assets\img\clubs\chinois.jpg">
   </div>
-  <div class="col-6 my-5 mx-auto d-block">
+  <div class="col-6 my-5 mx-auto my-auto d-block">
     <h3 ><a  href="#">Club Chinois</a></h3>
     <p>Much newer, replaced Heart, which was very good.</p>
   </div>
@@ -1147,10 +1147,10 @@ Close to everything, but quiet...
     </div>
     <div class="row">
 
-  <div class="col-6 mx-auto d-block">
+  <div class="col-6 mx-auto my-auto d-block">
     <img class="clubicon " src="assets\img\clubs\covasanta.jpg">
   </div>
-  <div class="col-6 my-5 mx-auto d-block">
+  <div class="col-6 my-5 mx-auto my-auto d-block">
     <h3 ><a  href="#">Cova Santa</a></h3>
     <p>A little out of the way but very cool bohemian vibe, events start earlier.</p>
   </div>
@@ -1170,10 +1170,10 @@ Close to everything, but quiet...
     </div>
     <div class="row">
 
-  <div class="col-6 mx-auto d-block">
+  <div class="col-6 mx-auto my-auto d-block">
     <img class="clubicon " src="assets\img\clubs\akasha.jpg">
   </div>
-  <div class="col-6 my-5 mx-auto d-block">
+  <div class="col-6 my-5 mx-auto my-auto d-block">
     <h3 ><a  href="#">Akasha</a></h3>
     <p>An unknown to me, very new, sounds like a very chill vibe.</p>
   </div>
@@ -1192,10 +1192,10 @@ Close to everything, but quiet...
     </div>
     <div class="row">
 
-  <div class="col-6 mx-auto d-block">
+  <div class="col-6 mx-auto my-auto d-block">
     <img class="clubicon " src="assets\img\clubs\ushuaia.jpeg">
   </div>
-  <div class="col-6 my-5 mx-auto d-block">
+  <div class="col-6 my-5 mx-auto my-auto d-block">
     <h3 ><a  href="#">Ushuaia</a></h3>
     <p>Commercial but a fantastic spectacle.</p>
   </div>
@@ -1214,10 +1214,10 @@ Close to everything, but quiet...
     </div>
     <div class="row">
 
-  <div class="col-6 mx-auto d-block">
+  <div class="col-6 mx-auto my-auto d-block">
     <img class="clubicon " src="assets\img\clubs\amnesia.jpg">
   </div>
-  <div class="col-6 my-5 mx-auto d-block">
+  <div class="col-6 my-5 mx-auto my-auto d-block">
     <h3 ><a  href="#">Amnesia</a></h3>
     <p>It's basically just a big shit warehouse but is a true classic.</p>
   </div>
@@ -1236,10 +1236,10 @@ Close to everything, but quiet...
     </div>
     <div class="row">
 
-  <div class="col-6 mx-auto d-block">
+  <div class="col-6 mx-auto my-auto d-block">
     <img class="clubicon " src="assets\img\clubs\eden.jpg">
   </div>
-  <div class="col-6 my-5 mx-auto d-block">
+  <div class="col-6 my-5 mx-auto my-auto d-block">
     <h3 ><a  href="#">Eden</a></h3>
     <p>The best club in San An, it's like a mid-tier London club, but it's not to be sniffed at</p>
   </div>
