turned official beach map section into gallery items

--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@ Close to everything, but quiet...
 
       <!-- Beaches Section -->
       <section id="beaches">
-        <div class="container-fluid row g-0" data-aos="fade-up">
+        <div class="container-fluid row g-0 px-2" data-aos="fade-up">
           <div class="section-header">
             <h2>Interactive Beach Map</h2>
             <p>Take a closer look - click any of the blue markers for pictures taken on location</p>
@@ -1014,18 +1014,37 @@ Close to everything, but quiet...
           
                 <h2>Ibiza Beaches</h2>
                 <p>The spanish government's guide to ibiza's beaches</p>
-                <div id="map">
-                  <img
-                    src="assets\img\mapimages\0001.jpg"
-                    alt=""
-                    class="img-fluid"
-                  />
-                  <img
-                    src="assets\img\mapimages\0002.jpg"
-                    alt=""
-                    class="img-fluid"
-                  />
-            </div>
+
+                <div class="venue-gallery">
+                  <a
+                    href="assets\img\mapimages\0001.jpg"
+                    class="glightbox"
+                    data-gall="venue-gallery"
+                  >
+                    <img
+                      src="assets\img\mapimages\0001.jpg"
+                      alt=""
+                      class="img-fluid"
+                    />
+                  </a>
+                </div>
+                <div class="venue-gallery">
+                  <a
+                    href="assets\img\mapimages\0002.jpg"
+                    class="glightbox"
+                    data-gall="venue-gallery"
+                  >
+                    <img
+                      src="assets\img\mapimages\0002.jpg"
+                      alt=""
+                      class="img-fluid"
+                    />
+                  </a>
+                </div>
+
+
+
+
           </div>
         </div>
       </section>
