--- a/index.html
+++ b/index.html
@@ -1307,18 +1307,12 @@ Close to everything, but quiet...
                     href="#faq2"
                     class="collapsed question"
                   >
-                    Feugiat scelerisque varius morbi enim nunc faucibus a
-                    pellentesque? <i class="bi bi-chevron-down icon-show"></i
+                    What time should I get to the club? <i class="bi bi-chevron-down icon-show"></i
                     ><i class="bi bi-chevron-up icon-close"></i>
                   </div>
                   <div id="faq2" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                      Dolor sit amet consectetur adipiscing elit pellentesque
-                      habitant morbi. Id interdum velit laoreet id donec
-                      ultrices. Fringilla phasellus faucibus scelerisque
-                      eleifend donec pretium. Est pellentesque elit ullamcorper
-                      dignissim. Mauris ultrices eros in cursus turpis massa
-                      tincidunt dui.
+                      Most club events start at 11pm and don't get busy until 1am, continuing until 6am. Arriving at Midnight is considered fairly early. You can generally arrive whenever you want if you have a ticket, unless the ticket specifies otherwise.<br><br> The best way to deal with this is to eat light at around 5 or 6pm, then have a snooze, wake up at 10ish and eat a bit more, have a few drinks, then head out. Trying to do an ibiza club night after a full day can be a challenge.
                     </p>
                   </div>
                 </li>
@@ -1329,18 +1323,16 @@ Close to everything, but quiet...
                     href="#faq3"
                     class="collapsed question"
                   >
-                    Dolor sit amet consectetur adipiscing elit pellentesque
-                    habitant morbi? <i class="bi bi-chevron-down icon-show"></i
+                    Which town should I visit? <i class="bi bi-chevron-down icon-show"></i
                     ><i class="bi bi-chevron-up icon-close"></i>
                   </div>
                   <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                      Eleifend mi in nulla posuere sollicitudin aliquam ultrices
-                      sagittis orci. Faucibus pulvinar elementum integer enim.
-                      Sem nulla pharetra diam sit amet nisl suscipit. Rutrum
-                      tellus pellentesque eu tincidunt. Lectus urna duis
-                      convallis convallis tellus. Urna molestie at elementum eu
-                      facilisis sed odio morbi quis
+                      Ibiza town is the main town, it's very multicultural, lots of Germans and Italians, some brits. The port area is excellent in the evening, both for meals and bars. <br><br>
+                      San Antonio is heavily English, and bit on the grotty side in places, but the sunset strip outside Cafe Mambo is excellent at twilight, and the West End is full of bars and can be fun/chaotic.<br><br>
+                      Santa Eularia is a much quieter more traditionally spanish seaside town, very good place to go out for a bite to eat, and the local beaches are great.
+
+                  
                     </p>
                   </div>
                 </li>
@@ -1351,18 +1343,13 @@ Close to everything, but quiet...
                     href="#faq4"
                     class="collapsed question"
                   >
-                    Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
+                    Where are the clubs?
                     <i class="bi bi-chevron-down icon-show"></i
                     ><i class="bi bi-chevron-up icon-close"></i>
                   </div>
                   <div id="faq4" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                      Dolor sit amet consectetur adipiscing elit pellentesque
-                      habitant morbi. Id interdum velit laoreet id donec
-                      ultrices. Fringilla phasellus faucibus scelerisque
-                      eleifend donec pretium. Est pellentesque elit ullamcorper
-                      dignissim. Mauris ultrices eros in cursus turpis massa
-                      tincidunt dui.
+                      The majority are in and around Ibiza Town. Pacha and Chinois are near the port. DC10, Hi and Ushuaia are on the southern end of Ibiza Town near the airport. Cova Santa is further south yet, 10 minutes outside of town. Amnesia is directly between Ibiza Town and San Antonio. Akasha is just north of Santa Eularia and Eden is in central San Antonio.
                     </p>
                   </div>
                 </li>
@@ -1373,17 +1360,12 @@ Close to everything, but quiet...
                     href="#faq5"
                     class="collapsed question"
                   >
-                    Tempus quam pellentesque nec nam aliquam sem et tortor
-                    consequat? <i class="bi bi-chevron-down icon-show"></i
+                    How are we planning to pay for shopping/group meals? <i class="bi bi-chevron-down icon-show"></i
                     ><i class="bi bi-chevron-up icon-close"></i>
                   </div>
                   <div id="faq5" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                      Molestie a iaculis at erat pellentesque adipiscing
-                      commodo. Dignissim suspendisse in est ante in. Nunc vel
-                      risus commodo viverra maecenas accumsan. Sit amet nisl
-                      suscipit adipiscing bibendum est. Purus gravida quis
-                      blandit turpis cursus in
+                      Download an app called Splitwise (<a href="https://apps.apple.com/us/app/splitwise/id458023433">Apple</a>, <a href="https://play.google.com/store/apps/details?id=com.Splitwise.SplitwiseMobile&hl=en_GB&gl=US">Android</a>) and join [add group name when made]. <br><br> this will help us keep track of who's paid for what and will calculate who owes what automagically at the end.
                     </p>
                   </div>
                 </li>
@@ -1394,8 +1376,7 @@ Close to everything, but quiet...
                     href="#faq6"
                     class="collapsed question"
                   >
-                    Tortor vitae purus faucibus ornare. Varius vel pharetra vel
-                    turpis nunc eget lorem dolor?
+                    [TBC]
                     <i class="bi bi-chevron-down icon-show"></i
                     ><i class="bi bi-chevron-up icon-close"></i>
                   </div>
