--- a/index.html
+++ b/index.html
@@ -343,14 +343,30 @@
                   <li class="d-flex flex-column flex-md-row py-4">
                     <span
                       class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted"
-                      >9:00 AM - 10:00 AM</span
+                      >Arrival - 9:35am</span
                     >
                     <div class="flex-grow-1 ps-4 border-start border-3">
-                      <h4>Registration and Coffee</h4>
+                      <h4>Land at IBZ and collect rental cars</h4>
                       
                       <p class="mb-0">
-                        Excepteur sint occaecat cupidatat non proident, sunt in
-                        culpa qui officia deserunt mollit anim id est laborum.
+                        After baggage claim Slands and Josh pick cars up from ClickRent. Rest of gang better off waiting at the airport as the mini-bus is small and the airport is air-conditioned. We'll swing back and collect you at a pre-arranged point once we've got it. Do not forget to pre-arrange a point (again). 
+
+                        Half an hour for passport control and bags, maybe an hour for rental collection. Should be on the road by 11am.
+                      </p>
+                    </div>
+                  </li>
+                  <li class="d-flex flex-column flex-md-row py-4">
+                    <span
+                      class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted"
+                      >4pm check-in</span
+                    >
+                    <div class="flex-grow-1 ps-4 border-start border-3">
+                      <h4>Villa keys & hunter-gathering</h4>
+                      
+                      <p class="mb-0">
+                        Check in is at 4pm, ideally we ask and they let us check in at midday. Find our way to the villa, put our shit down, take a bit of a break, arrange some kind of supermarket trip and a trip for party supplies.
+
+                        Worst case we do all the other stuff first, then check in.
                       </p>
                     </div>
                   </li>
@@ -1365,7 +1381,7 @@ Close to everything, but quiet...
                   </div>
                   <div id="faq5" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                      Download an app called Splitwise (<a href="https://apps.apple.com/us/app/splitwise/id458023433">Apple</a>, <a href="https://play.google.com/store/apps/details?id=com.Splitwise.SplitwiseMobile&hl=en_GB&gl=US">Android</a>) and join [add group name when made]. <br><br> this will help us keep track of who's paid for what and will calculate who owes what automagically at the end.
+                      Download an app called Splitwise (<a href="https://apps.apple.com/us/app/splitwise/id458023433">Apple</a>, <a href="https://play.google.com/store/apps/details?id=com.Splitwise.SplitwiseMobile&hl=en_GB&gl=US">Android</a>) and join [add group name when made]. <br><br> This will help us keep track of who's paid for what and will calculate who owes what automagically at the end. Just make sure to log everything you pay for.
                     </p>
                   </div>
                 </li>
