--- a/index.html
+++ b/index.html
@@ -366,10 +366,48 @@
                       <p class="mb-0">
                         Check in is at 4pm, ideally we ask and they let us check in at midday. Find our way to the villa, put our shit down, take a bit of a break, arrange some kind of supermarket trip and a trip for party supplies.
 
-                        Worst case we do all the other stuff first, then check in.
+                        Worst case we do all the other stuff first, then check in at 4pm.
                       </p>
                     </div>
                   </li>
+
+                  <li class="d-flex flex-column flex-md-row py-4">
+                    <span
+                      class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted"
+                      >EVENT TIME</span
+                    >
+                    <div class="flex-grow-1 ps-4 border-start border-3">
+                      <h4>EVENT LOCATION</h4>
+                      <div class="row">
+
+                        <div class="col-4 mx-auto my-auto d-block">
+                          <img class="clubicon " src="assets\img\clubs\akasha.jpg">
+                        </div>
+                        <div class="col-8 my-5 mx-auto my-auto d-block">
+                          <h3 ><a  href="#">EVENT TITLE</a></h3>
+                          <ul class="list-unstyled">
+                            <li>
+                              <p>Artist 1 </p>
+                            </li>
+                            <li>
+                              <p>Artist 2 </p>
+                            </li>
+                            <li>
+                              <p>Artist 3</p>
+                            </li>
+                            <li>
+                              <p>Artist 4 </p>
+                            </li>
+                          </ul>
+                          
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+
+
+
+
                 </ul>
               </div>
               <!-- ======= Day Seperator ======= -->
