--- a/index.html
+++ b/index.html
@@ -1431,19 +1431,13 @@ Close to everything, but quiet...
                     href="#faq6"
                     class="collapsed question"
                   >
-                    [TBC]
+                    When and where should I buy tickets from?
                     <i class="bi bi-chevron-down icon-show"></i
                     ><i class="bi bi-chevron-up icon-close"></i>
                   </div>
                   <div id="faq6" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                      Laoreet sit amet cursus sit amet dictum sit amet justo.
-                      Mauris vitae ultricies leo integer malesuada nunc vel.
-                      Tincidunt eget nullam non nisi est sit amet. Turpis nunc
-                      eget lorem dolor sed. Ut venenatis tellus in metus
-                      vulputate eu scelerisque. Pellentesque diam volutpat
-                      commodo sed egestas egestas fringilla phasellus faucibus.
-                      Nibh tellus molestie nunc non blandit massa enim nec.
+                      For the most budget-friendly option, consider purchasing tickets on Clubtickets.com. Snag early bird tickets for extra savings, or opt for open bar tickets through bar promoters for unlimited drinks and club entry.
                     </p>
                   </div>
                 </li>
