--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,7 @@ Close to everything, but quiet...
                   </div>
                   <div id="faq6" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                      For the most budget-friendly option, consider purchasing tickets on Clubtickets.com. Snag early bird tickets for extra savings, or opt for open bar tickets through bar promoters for unlimited drinks and club entry.
+                      For the most budget-friendly option, consider purchasing tickets on <a href="Clubtickets.com">Clubtickets.com</a>. Snag early bird tickets for extra savings, or opt for open bar tickets through bar promoters for unlimited drinks and club entry.
                     </p>
                   </div>
                 </li>
