re-ordering background.

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 
 
       <!-- ======= Venue Section ======= -->
-      <section id="venue" class="section-with-bg">
+      <section id="venue">
         <div class="container-fluid" data-aos="fade-up">
           <div class="section-header">
             <h2>Villa Location</h2>
@@ -839,7 +839,7 @@ Close to everything, but quiet...
       <!-- End Venue Section -->
 
       <!-- Beaches Section -->
-      <section id="beaches">
+      <section id="beaches" class="section-with-bg">
         <div class="container-fluid row g-0 px-2" data-aos="fade-up">
           <div class="section-header">
             <h2>Interactive Beach Map</h2>
@@ -888,7 +888,7 @@ Close to everything, but quiet...
         <!-- End Beaches Section -->
 
       <!-- ======= Clubs Section (was hotels) ======= -->
-      <section id="clubs" class="section-with-bg">
+      <section id="clubs" >
         <div class="container text-center" data-aos="fade-up">
           <div class="section-header">
             <h2>Clubs</h2>
@@ -1326,7 +1326,7 @@ Close to everything, but quiet...
       <!-- End Speakers Section -->
 
       <!-- =======  F.A.Q Section ======= -->
-      <section id="faq">
+      <section id="faq" >
         <div class="container" data-aos="fade-up">
           <div class="section-header">
             <h2>F.A.Q</h2>
