added missing venue link in menu

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About</a></li>
             <li><a class="nav-link scrollto" href="#schedule">Party Calendar</a></li>
+            <li><a class="nav-link scrollto" href="#venue">Villa</a></li>
             <li><a class="nav-link scrollto" href="#beaches">Beaches</a></li>
             <li><a class="nav-link scrollto" href="#clubs">Clubs</a></li>
             <li><a class="nav-link scrollto" href="#speakers">Contenders</a></li>
