--- a/index.html
+++ b/index.html
@@ -1037,7 +1037,7 @@ Which give the house his special relax ambiance.
             <div class="col-lg-4 col-md-6">
               <div class="speaker" data-aos="fade-up" data-aos-delay="100">
                 <img
-                  src="assets\img\speakers\parry.webp"
+                  src="assets\img\speakers\PXL_20220625_200832605.jpg"
                   alt="Speaker 1"
                   class="img-fluid"
                 />
