--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <style>
+    .tab-pane {
+      display: none;
+    }
+  
+    .tab-pane.active {
+      display: block;
+    }
+  </style>
   </head>
 
   <body>
@@ -181,63 +190,70 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     
     <script>
-        // Fetch JSON data
-        fetch('events.json')
-        .then(response => response.json())
-        .then(data => {
-          console.log(data);
-            const days = Object.keys(data);
-            const tabButtons = document.getElementById('myTab');
-            const tabContent = document.getElementById('myTabContent');
-    
-            // Generate buttons for each day
-            days.forEach((day, index) => {
-    const button = document.createElement('button');
-    button.classList.add('nav-link', 'px-4', 'text-start');
-    button.setAttribute('id', `d${index + 1}-tab`);
-    button.setAttribute('data-bs-toggle', 'tab');
-    button.setAttribute('data-bs-target', `#day${index + 1}`);
-    button.setAttribute('type', 'button');
-    button.setAttribute('role', 'tab');
-    button.setAttribute('aria-controls', `day${index + 1}`);
-    button.setAttribute('aria-selected', index === 0 ? 'true' : 'false');
-    button.innerText = `${day}`;
-    tabButtons.appendChild(button);
+// Fetch JSON data
+fetch('events.json')
+.then(response => response.json())
+.then(data => {
+    console.log(data);
+    const days = Object.keys(data);
+    const tabButtons = document.getElementById('myTab');
+    const tabContent = document.getElementById('myTabContent');
 
-    // Generate tab content for each day
-    const tabPane = document.createElement('div');
-    tabPane.classList.add('tab-pane', 'fade');
-    if (index === 0) {
-        tabPane.classList.add('active');
-    }
-    tabPane.setAttribute('id', `day${index + 1}`);
-    tabPane.setAttribute('role', 'tabpanel');
-    tabPane.setAttribute('aria-labelledby', `d${index + 1}-tab`);
+    // Generate buttons for each day
+    days.forEach((day, index) => {
+        const button = document.createElement('button');
+        button.classList.add('nav-link', 'px-4', 'text-start');
+        button.setAttribute('id', `d${index + 1}-tab`);
+        button.setAttribute('data-bs-toggle', 'tab');
+        button.setAttribute('data-bs-target', `#day${index + 1}`);
+        button.setAttribute('type', 'button');
+        button.setAttribute('role', 'tab');
+        button.setAttribute('aria-controls', `day${index + 1}`);
+        button.setAttribute('aria-selected', index === 0 ? 'true' : 'false');
+        button.innerText = `${day}`;
+        button.addEventListener('click', () => {
+            // Remove active class from all tab-panes
+            document.querySelectorAll('.tab-pane').forEach(pane => pane.classList.remove('active'));
+            // Add active class to the selected tab-pane
+            document.getElementById(`day${index + 1}`).classList.add('active');
+        });
+        tabButtons.appendChild(button);
 
-    const events = data[day];
-    const eventList = document.createElement('ul');
-    eventList.classList.add('pt-4', 'list-unstyled', 'mb-0');
-    events.forEach(event => {
-        const eventItem = document.createElement('li');
-        // Generate event details
-        eventItem.innerHTML = `
-            <span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted">${event.time}</span>
-            <div class="flex-grow-1 ps-4 border-start border-3">
-                <h4>${event.title}</h4>
-                ${event.location ? `<span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 text-muted">${event.location}</span>` : ''}
-                <p class="mb-0">${event.description}</p>
-                ${event.image ? `<a href="${event.url}"><img src="${event.image}" alt="Event Image"></a>` : ''}
-                <br><br>
+        // Generate tab content for each day
+        const tabPane = document.createElement('div');
+        tabPane.classList.add('tab-pane', 'fade');
+        if (index === 0) {
+            tabPane.classList.add('active');
+        }
+        tabPane.setAttribute('id', `day${index + 1}`);
+        tabPane.setAttribute('role', 'tabpanel');
+        tabPane.setAttribute('aria-labelledby', `d${index + 1}-tab`);
+
+        const events = data[day];
+        const eventList = document.createElement('ul');
+        eventList.classList.add('pt-4', 'list-unstyled', 'mb-0');
+        events.forEach(event => {
+            const eventItem = document.createElement('li');
+            // Generate event details
+            eventItem.innerHTML = `
+                <span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted">${event.time}</span>
+                <div class="flex-grow-1 ps-4 border-start border-3">
+                    <h4>${event.title}</h4>
+                    ${event.location ? `<span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 text-muted">${event.location}</span>` : ''}
+                    <p class="mb-0">${event.description}</p>
+                    ${event.image ? `<a href="${event.url}"><img src="${event.image}" alt="Event Image"></a>` : ''}
+                    <br><br>
                 </div>
-        `;
-        eventList.appendChild(eventItem);
+            `;
+            eventList.appendChild(eventItem);
+        });
+        tabPane.appendChild(eventList);
+        tabContent.appendChild(tabPane);
     });
-    tabPane.appendChild(eventList);
-    tabContent.appendChild(tabPane);
-});
 
-        })
-        .catch(error => console.error('Error fetching events:', error));
+})
+.catch(error => console.error('Error fetching events:', error));
+
     </script>
 
       <!-- End MY Schedule Section -->
